tempfile/derive_more/tests/compile_fail/debug/fmt_on_enum.rs
#[derive(derive_more::Debug)]
#[debug("Test")]
pub enum Foo {
    Unit
}

fn main() {}
